# wasm4games

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/wasm4games/: Cargo.toml  EXTRACTION.md  README.md
crates/wasm4games-capi/: Cargo.toml  harness.c  portability_proof.sh
crates/wasm4games-capi/src/: lib.rs
crates/wasm4games-wasm4pm/: Cargo.toml  README.md
crates/wasm4games-wasm4pm/src/: lib.rs
crates/wasm4games/benches/: w4g_bench.rs
crates/wasm4games/examples/: ai_anticheat.rs  camera_audio.rs  combat_sim.rs  dungeon_crawler.rs  full_game_loop.rs  multiplayer.rs  narrative_camera.rs  quality_engine.rs  siege_defense.rs  space_station.rs  world_sim.rs
crates/wasm4games/ggen/: ggen.toml
crates/wasm4games/ggen/.ggen/: sync-state.json
crates/wasm4games/ggen/queries/: chains.rq  examples.rq  kernels.rq  ocel_schema.rq  pattern_docs.rq  pattern_index.rq  pattern_index_docs.rq
crates/wasm4games/ggen/schema/: chains.ttl  examples.ttl  patterns.ttl
crates/wasm4games/ggen/templates/: chain_test.rs.tera  example.rs.tera  kernel.rs.tera  ocel_schema.rs.tera  pattern_doc.md.tera  patterns_index.md.tera  patterns_mod.rs.tera
crates/wasm4games/proptest-regressions/patterns/: biome_class_selected.txt  camera_distance_clamped.txt  capability_flag_evaluated.txt  condition_flag_evaluated.txt  fov_adjusted.txt  terrain_height_quantized.txt
crates/wasm4games/src/: class.rs  compat.rs  corpus.rs  ir.rs  lib.rs  verify.rs
crates/wasm4games/src/chain_tests/: anticheat_verdict.rs  audio_cascade.rs  combat_hit.rs  mod.rs  mp_resync.rs  nav_quest.rs  procgen_tile.rs  quality_loop.rs  shop_purchase.rs
crates/wasm4games/src/evidence/: mod.rs  ocel.rs  ocel_schema.rs  otel.rs  receipt.rs  replay.rs
crates/wasm4games/src/patterns/: aabb_collision_resolved.rs  action_mask_applied.rs  action_rate_bounded.rs  adapter_priority_ranked.rs  ai_action_selected.rs  audio_distance_attenuated.rs  audio_fade_applied.rs  audio_priority_selected.rs  audio_trigger_evaluated.rs  biome_class_selected.rs  bridge_state_transitioned.rs  camera_distance_clamped.rs  camera_follow_lerped.rs  camera_shake_applied.rs  capability_flag_evaluated.rs  choice_weight_selected.rs  command_opcode_encoded.rs  condition_flag_evaluated.rs  cooldown_legality_checked.rs  ctq_threshold_evaluated.rs  currency_delta_applied.rs  damage_applied.rs  defect_rate_quantized.rs  dialogue_cooldown_bounded.rs  dialogue_node_advanced.rs  entity_state_transitioned.rs  episode_return_bounded.rs  fixed_tick_advanced.rs  fov_adjusted.rs  heuristic_distance_estimated.rs  input_admitted.rs  inventory_item_changed.rs  lag_compensation_applied.rs  level_gate_evaluated.rs  look_target_weighted.rs  mastery_moment_detected.rs  mod.rs  movement_legality_checked.rs  narrative_branch_selected.rs  nav_state_advanced.rs  (+36 more)
docs/diataxis/explanation/: ggen-only-user-surface.md  wasm4games-overview.md  wasm4games-server-architecture.md  wasm4games-the-honest-kernel.md
docs/diataxis/how-to/: wasm4games-run-wasm4pm-admission.md
docs/diataxis/reference/: wasm4games-patterns.md
docs/diataxis/tutorials/: wasm4games-add-a-pattern.md
proof/: portability_spine.md  residual_contract_gate.md
scripts/: wasm32_verify.sh
