[package]
name = "wasm4games"
version = "26.6.13"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seanchatmangpt/wasm4games"
description = "Branchless no_std game-pattern foundry emitting object-centric evidence, built on bcinr-logic"
readme = "README.md"
keywords = ["branchless", "gamedev", "no-std", "process-mining"]
categories = ["game-development", "no-std", "simulation"]

[dependencies]
bcinr-logic = { git = "https://github.com/seanchatmangpt/bcinr", version = "26.6.13" }
criterion = { version = "0.5", optional = true }

[dev-dependencies]
proptest = "1.2.0"

[features]
default = []
alloc = ["bcinr-logic/alloc"]
std = ["alloc", "bcinr-logic/std"]
bench = ["dep:criterion", "bcinr-logic/bench"]

[[bench]]
name = "w4g_bench"
harness = false

[[example]]
name = "ai_anticheat"
required-features = ["std"]

[[example]]
name = "camera_audio"
required-features = ["std"]

[[example]]
name = "combat_sim"
required-features = ["std"]

[[example]]
name = "full_game_loop"
required-features = ["std"]

[[example]]
name = "multiplayer"
required-features = ["std"]

[[example]]
name = "narrative_camera"
required-features = ["std"]

[[example]]
name = "quality_engine"
required-features = ["std"]

[[example]]
name = "world_sim"
required-features = ["std"]

[[example]]
name = "space_station"
required-features = ["std"]

[[example]]
name = "siege_defense"
required-features = ["std"]

[[example]]
name = "dungeon_crawler"
required-features = ["std"]
